# fizixmech

./: .gitignore  LICENSE  README.md  TODO.md  app.py  physics.py  pyproject.toml  renderer.py  requirements-dev.txt  requirements.txt  run.py  settings.json  ui.py
assets/themes/: .gitkeep
docs/: QUICKSTART.md  architecture.md  controls.md
saves/: .gitkeep
src/: __init__.py  app.py  command_palette.py  config.py  logger.py  main.py  physics.py  presets.py  renderer.py  statusbar.py  theme.py  toolbar.py  ui.py  welcome.py
src/models/: __init__.py  local_force.py  spring.py  vector.py
tests/: __init__.py  test_physics.py
