[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fizixmech"
version = "1.0.2"
description = "2D physics sandbox built with Dear PyGui and Pymunk"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fayazul", email = "fayaz@example.com"}
]
keywords = ["physics", "simulation", "sandbox", "2d", "pymunk", "dearpygui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Games/Entertainment :: Simulation",
]
requires-python = ">=3.10"
dependencies = [
    "dearpygui>=1.11.1",
    "pymunk>=6.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/fyzl329/fizixmech"
Repository = "https://github.com/fyzl329/fizixmech.git"
Issues = "https://github.com/fyzl329/fizixmech/issues"

[project.scripts]
fizixmech = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
